--- a/index.html
+++ b/index.html
@@ -3,137 +3,91 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-  <title>BLACKJ · MyBookie.ag Live Blackjack</title>
+  <title>BLACKJ · MyBookie Live</title>
   <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-  <header class="topbar">
-    <h1>BLACKJ</h1>
-    <button id="settingsBtn" class="btn">Settings</button>
-  </header>
 
-  <main class="layout">
-    <section class="panel metrics">
-      <div><span>RC</span><strong id="rcVal">0</strong></div>
-      <div><span>TC</span><strong id="tcVal">0.00</strong></div>
-      <div><span>Edge</span><strong id="edgeVal">0.00%</strong></div>
-      <div><span>Bet</span><strong id="betVal">1u</strong></div>
-      <div><span>Band</span><strong id="bandBadge">NEUTRAL</strong></div>
-      <div><span>Cards</span><strong id="cardsDealtVal">0</strong></div>
-      <div><span>Decks Seen</span><strong id="decksSeenVal">0.00</strong></div>
-      <div><span>Decks Rem</span><strong id="decksRemainVal">6.00</strong></div>
-      <div><span>Aces Seen</span><strong id="acesSeenVal">0</strong></div>
-    </section>
+<header class="topbar">
+  <div class="brand">BLACKJ</div>
+  <button id="settingsBtn" class="ghost-btn">Settings</button>
+</header>
 
-    <section class="panel controls">
-      <div class="row">
-        <button id="btnPlayer" class="btn">Player</button>
-        <button id="btnDealer" class="btn">Dealer</button>
-        <button id="btnTable" class="btn">Table</button>
-      </div>
-      <div class="row">
-        <button id="nextHandBtn" class="btn">Next Hand</button>
-        <button id="noiseBtn" class="btn">Noise</button>
-        <button id="resetBtn" class="btn danger">Reset</button>
-      </div>
-      <div class="row">
-        <button id="overlayBtn" class="btn">Overlay</button>
-        <button id="hardcoreBtn" class="btn">Hardcore</button>
-        <button id="edgeToggle" class="btn">Edge/Bet</button>
-      </div>
-      <div class="row">
-        <button id="perfBtn" class="btn">Perf</button>
-      </div>
-      <div>Target: <strong id="targetVal">TABLE</strong></div>
-      <div>Action: <strong id="actionVal">—</strong></div>
-      <p id="guideLine">Waiting for cards…</p>
+<main class="app">
 
-      <h3>Player</h3>
+  <!-- PRIMARY DISPLAY -->
+  <section class="primary">
+    <div class="tc-block">
+      <span>True Count</span>
+      <div id="tcVal" class="tc-value">0.00</div>
+    </div>
+
+    <div class="bet-block">
+      <span>Recommended Bet</span>
+      <div id="betVal" class="bet-value">1u</div>
+    </div>
+
+    <div class="band-indicator">
+      <div id="bandBadge" class="band neutral">NEUTRAL</div>
+    </div>
+  </section>
+
+  <!-- SECONDARY METRICS -->
+  <section class="secondary">
+    <div>RC <strong id="rcVal">0</strong></div>
+    <div>Edge <strong id="edgeVal">0.00%</strong></div>
+    <div>Decks <strong id="decksRemainVal">6.00</strong></div>
+    <div>Cards <strong id="cardsDealtVal">0</strong></div>
+  </section>
+
+  <!-- ACTION PANEL -->
+  <section class="hands">
+    <div class="hand">
+      <h4>Player</h4>
       <div id="playerCards" class="cards"></div>
-      <h3>Dealer</h3>
+    </div>
+
+    <div class="hand">
+      <h4>Dealer</h4>
       <div id="dealerCards" class="cards"></div>
-
-      <div class="card-buttons">
-        <button class="chip-btn" data-rank="A">A</button>
-        <button class="chip-btn" data-rank="2">2</button>
-        <button class="chip-btn" data-rank="3">3</button>
-        <button class="chip-btn" data-rank="4">4</button>
-        <button class="chip-btn" data-rank="5">5</button>
-        <button class="chip-btn" data-rank="6">6</button>
-        <button class="chip-btn" data-rank="7">7</button>
-        <button class="chip-btn" data-rank="8">8</button>
-        <button class="chip-btn" data-rank="9">9</button>
-        <button class="chip-btn" data-rank="T">T</button>
-        <button class="chip-btn" data-rank="J">J</button>
-        <button class="chip-btn" data-rank="Q">Q</button>
-        <button class="chip-btn" data-rank="K">K</button>
-      </div>
-
-      <div class="pills">
-        <span id="countSysLabel">Hi-Lo</span>
-        <span id="decksLabel">6</span>
-        <span id="tcModeLabel">SIM</span>
-        <span id="aceSidePill" class="hidden">Ace Side: <b id="aceSideLabel">OFF</b></span>
-        <span id="aceDeltaPill" class="hidden">Aces seen: <b id="acesSeenLabel">0</b></span>
-      </div>
-    </section>
-  </main>
-
-  <div id="overlay" class="overlay hidden"></div>
-  <div id="perfHud" class="perf hidden"><span id="perfFps">fps 0</span><span id="perfFrames">frames 0</span></div>
-  <div id="toast" class="toast"></div>
-
-  <div id="settingsBackdrop" class="backdrop hidden"></div>
-  <aside id="settingsDrawer" class="drawer hidden" aria-hidden="true">
-    <h2>Settings</h2>
-    <label>Count System
-      <select id="countSystemSelect">
-        <option value="hilo">Hi-Lo</option>
-        <option value="wong_halves">Wong Halves</option>
-        <option value="hiopt2">Hi-Opt II</option>
-      </select>
-    </label>
-    <label>Decks
-      <select id="decksSelect"><option>6</option></select>
-    </label>
-    <div>
-      <button id="tcModeSimBtn" class="btn">SIM</button>
-      <button id="tcModeCasinoBtn" class="btn">CASINO</button>
     </div>
-    <div id="aceSideField">
-      <button id="aceSideOnBtn" class="btn">Ace Side ON</button>
-      <button id="aceSideOffBtn" class="btn">Ace Side OFF</button>
-    </div>
-    <div id="decksRemainField">
-      <input id="decksRemainRange" type="range" min="0.25" max="6" step="0.25" value="3" />
-      <span id="decksRemainReadout">3.00</span>
-    </div>
-    <label>Bankroll <input id="bankrollInput" type="number" value="100" min="10" step="10" /></label>
-    <label>Max Kelly
-      <select id="kellySelect">
-        <option value="0.1">0.10</option>
-        <option value="0.2">0.20</option>
-        <option value="0.25" selected>0.25</option>
-      </select>
-    </label>
-    <div class="row">
-      <button id="settingsApplyBtn" class="btn">Apply</button>
-      <button id="settingsResetBtn" class="btn danger">Reset Prefs</button>
-      <button id="settingsCloseBtn" class="btn">Close</button>
-    </div>
-  </aside>
 
-  <nav id="tapPad" aria-label="Tap pad">
-    <div class="tap-grid">
-      <button data-rank="K">K</button><button data-rank="Q">Q</button><button data-rank="J">J</button>
-      <button data-rank="A">A</button><button data-rank="2">2</button><button data-rank="3">3</button>
-      <button data-rank="4">4</button><button data-rank="5">5</button><button data-rank="6">6</button>
-      <button data-rank="7">7</button><button data-rank="8">8</button><button data-rank="9">9</button>
-      <button id="tapUndo">Undo</button><button data-rank="T">T</button><button id="tapTarget">Target <span id="tapTargetVal">Player</span></button>
+    <div class="action-row">
+      <div>Action: <strong id="actionVal">—</strong></div>
+      <div>Target: <strong id="targetVal">TABLE</strong></div>
     </div>
-  </nav>
 
-  <script src="./engine.js"></script>
-  <script src="./app.js"></script>
+    <div id="guideLine" class="guide">Waiting for cards…</div>
+  </section>
+
+</main>
+
+<!-- TAP PAD -->
+<nav id="tapPad">
+  <div class="tap-grid">
+    <button data-rank="K">K</button>
+    <button data-rank="Q">Q</button>
+    <button data-rank="J">J</button>
+
+    <button data-rank="A">A</button>
+    <button data-rank="2">2</button>
+    <button data-rank="3">3</button>
+
+    <button data-rank="4">4</button>
+    <button data-rank="5">5</button>
+    <button data-rank="6">6</button>
+
+    <button data-rank="7">7</button>
+    <button data-rank="8">8</button>
+    <button data-rank="9">9</button>
+
+    <button id="tapUndo" class="undo">Undo</button>
+    <button data-rank="T" class="ten">T</button>
+    <button id="tapTarget" class="target">Target <span id="tapTargetVal">Player</span></button>
+  </div>
+</nav>
+
+<script src="./engine.js"></script>
+<script src="./app.js"></script>
 </body>
 </html>
