--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <main class="app">
 
-  <!-- PRIMARY DISPLAY -->
+  <!-- PRIMARY METRICS -->
   <section class="primary">
     <div class="tc-block">
       <span>True Count</span>
@@ -27,12 +27,9 @@
       <div id="betVal" class="bet-value">1u</div>
     </div>
 
-    <div class="band-indicator">
-      <div id="bandBadge" class="band neutral">NEUTRAL</div>
-    </div>
+    <div id="bandBadge" class="band neutral">NEUTRAL</div>
   </section>
 
-  <!-- SECONDARY METRICS -->
   <section class="secondary">
     <div>RC <strong id="rcVal">0</strong></div>
     <div>Edge <strong id="edgeVal">0.00%</strong></div>
@@ -40,27 +37,40 @@
     <div>Cards <strong id="cardsDealtVal">0</strong></div>
   </section>
 
-  <!-- ACTION PANEL -->
+  <!-- HANDS -->
   <section class="hands">
-    <div class="hand">
+
+    <div class="hand-block">
       <h4>Player</h4>
       <div id="playerCards" class="cards"></div>
     </div>
 
-    <div class="hand">
+    <div class="hand-block">
       <h4>Dealer</h4>
       <div id="dealerCards" class="cards"></div>
     </div>
 
-    <div class="action-row">
-      <div>Action: <strong id="actionVal">—</strong></div>
-      <div>Target: <strong id="targetVal">TABLE</strong></div>
+    <div class="hand-block">
+      <h4>Table</h4>
+      <div id="tableCards" class="cards"></div>
     </div>
 
-    <div id="guideLine" class="guide">Waiting for cards…</div>
+    <div class="recommendation">
+      <div class="rec-label">Recommended Move</div>
+      <div id="actionVal" class="rec-value">—</div>
+      <div id="guideLine" class="rec-sub">Waiting for cards…</div>
+    </div>
+
   </section>
 
 </main>
+
+<!-- SETTINGS DRAWER -->
+<div id="settingsBackdrop" class="backdrop hidden"></div>
+<div id="settingsDrawer" class="drawer hidden">
+  <h3>Settings</h3>
+  <button id="settingsCloseBtn" class="ghost-btn">Close</button>
+</div>
 
 <!-- TAP PAD -->
 <nav id="tapPad">
@@ -83,7 +93,7 @@
 
     <button id="tapUndo" class="undo">Undo</button>
     <button data-rank="T" class="ten">T</button>
-    <button id="tapTarget" class="target">Target <span id="tapTargetVal">Player</span></button>
+    <button id="tapTarget" class="target">Target</button>
   </div>
 </nav>
 
