--- a/index.html
+++ b/index.html
@@ -10,90 +10,158 @@
 
 <header class="topbar">
   <div class="brand">BLACKJ</div>
-  <button id="settingsBtn" class="ghost-btn">Settings</button>
+  <div class="top-actions">
+    <button id="settingsBtn" class="btn btn-ghost">Settings</button>
+  </div>
 </header>
 
-<main class="app">
-
-  <!-- PRIMARY METRICS -->
-  <section class="primary">
-    <div class="tc-block">
-      <span>True Count</span>
-      <div id="tcVal" class="tc-value">0.00</div>
+<main class="shell">
+  <section class="hero">
+    <div class="hero-main">
+      <div class="hero-kicker">True Count</div>
+      <div id="tcVal" class="hero-tc">0.00</div>
     </div>
 
-    <div class="bet-block">
-      <span>Recommended Bet</span>
-      <div id="betVal" class="bet-value">1u</div>
+    <div class="hero-side">
+      <div class="hero-chip">
+        <div class="label">Bet</div>
+        <div id="betVal" class="value">1u</div>
+      </div>
+
+      <div id="bandBadge" class="band band-neutral">NEUTRAL</div>
     </div>
-
-    <div id="bandBadge" class="band neutral">NEUTRAL</div>
   </section>
 
-  <section class="secondary">
-    <div>RC <strong id="rcVal">0</strong></div>
-    <div>Edge <strong id="edgeVal">0.00%</strong></div>
-    <div>Decks <strong id="decksRemainVal">6.00</strong></div>
-    <div>Cards <strong id="cardsDealtVal">0</strong></div>
+  <section class="telemetry">
+    <div class="telemetry-item"><span>RC</span><strong id="rcVal">0</strong></div>
+    <div class="telemetry-item"><span>Edge</span><strong id="edgeVal">-0.55%</strong></div>
+    <div class="telemetry-item"><span>Decks</span><strong id="decksRemainVal">6.00</strong></div>
+    <div class="telemetry-item"><span>Cards</span><strong id="cardsDealtVal">0</strong></div>
   </section>
 
-  <!-- HANDS -->
+  <section class="rec">
+    <div class="rec-label">Recommended Move</div>
+    <div id="actionVal" class="rec-action">—</div>
+    <div id="guideLine" class="rec-sub">Enter Player + Dealer cards to get guidance.</div>
+  </section>
+
   <section class="hands">
-
-    <div class="hand-block">
-      <h4>Player</h4>
+    <div class="hand">
+      <div class="hand-head">
+        <div class="hand-title">Player</div>
+        <div class="hand-hint">Tap pad target: Player</div>
+      </div>
       <div id="playerCards" class="cards"></div>
     </div>
 
-    <div class="hand-block">
-      <h4>Dealer</h4>
+    <div class="hand">
+      <div class="hand-head">
+        <div class="hand-title">Dealer</div>
+        <div class="hand-hint">Dealer upcard drives recommendation</div>
+      </div>
       <div id="dealerCards" class="cards"></div>
     </div>
 
-    <div class="hand-block">
-      <h4>Table</h4>
+    <div class="hand">
+      <div class="hand-head">
+        <div class="hand-title">Table</div>
+        <div class="hand-hint">Other seen cards, burn, etc.</div>
+      </div>
       <div id="tableCards" class="cards"></div>
     </div>
-
-    <div class="recommendation">
-      <div class="rec-label">Recommended Move</div>
-      <div id="actionVal" class="rec-value">—</div>
-      <div id="guideLine" class="rec-sub">Waiting for cards…</div>
-    </div>
-
   </section>
-
 </main>
 
-<!-- SETTINGS DRAWER -->
+<!-- Settings -->
 <div id="settingsBackdrop" class="backdrop hidden"></div>
-<div id="settingsDrawer" class="drawer hidden">
-  <h3>Settings</h3>
-  <button id="settingsCloseBtn" class="ghost-btn">Close</button>
-</div>
+<aside id="settingsDrawer" class="drawer hidden" aria-hidden="true">
+  <div class="drawer-head">
+    <div class="drawer-title">Settings</div>
+    <button id="settingsCloseBtn" class="btn btn-ghost">Close</button>
+  </div>
 
-<!-- TAP PAD -->
-<nav id="tapPad">
+  <div class="drawer-body">
+    <div class="field">
+      <label>Count System</label>
+      <select id="countSystemSelect">
+        <option value="hilo">Hi-Lo</option>
+        <option value="hiopt2">Hi-Opt II</option>
+        <option value="wong_halves">Wong Halves</option>
+      </select>
+    </div>
+
+    <div class="field">
+      <label>TC Mode</label>
+      <div class="seg">
+        <button id="tcModeSimBtn" class="seg-btn active" type="button">SIM</button>
+        <button id="tcModeCasinoBtn" class="seg-btn" type="button">CASINO</button>
+      </div>
+      <div class="help">SIM uses dealt cards, CASINO uses your decks-remaining estimate.</div>
+    </div>
+
+    <div id="decksRemainField" class="field hidden">
+      <label>Decks Remaining (estimate)</label>
+      <input id="decksRemainRange" type="range" min="0.25" max="6" step="0.25" value="3" />
+      <div class="mono"><span id="decksRemainReadout">3.00</span> decks</div>
+    </div>
+
+    <div id="aceSideField" class="field hidden">
+      <label>Hi-Opt II Ace Side Count</label>
+      <div class="seg">
+        <button id="aceSideOnBtn" class="seg-btn" type="button">ON</button>
+        <button id="aceSideOffBtn" class="seg-btn active" type="button">OFF</button>
+      </div>
+    </div>
+
+    <div class="field">
+      <label>Bankroll (units)</label>
+      <input id="bankrollInput" type="number" value="100" min="10" step="10" />
+    </div>
+
+    <div class="field">
+      <label>Max Kelly</label>
+      <select id="kellySelect">
+        <option value="0.10">0.10</option>
+        <option value="0.25" selected>0.25</option>
+        <option value="0.50">0.50</option>
+      </select>
+    </div>
+
+    <div class="drawer-actions">
+      <button id="settingsApplyBtn" class="btn btn-primary" type="button">Apply</button>
+      <button id="settingsResetBtn" class="btn btn-ghost" type="button">Reset</button>
+    </div>
+
+    <div class="help small">
+      Rules target: MyBookie Live, 6D, H17, DAS, no surrender.
+    </div>
+  </div>
+</aside>
+
+<!-- Tap Pad -->
+<nav id="tapPad" class="tap">
   <div class="tap-grid">
-    <button data-rank="K">K</button>
-    <button data-rank="Q">Q</button>
-    <button data-rank="J">J</button>
+    <button data-rank="K" class="tap-btn">K</button>
+    <button data-rank="Q" class="tap-btn">Q</button>
+    <button data-rank="J" class="tap-btn">J</button>
 
-    <button data-rank="A">A</button>
-    <button data-rank="2">2</button>
-    <button data-rank="3">3</button>
+    <button data-rank="A" class="tap-btn">A</button>
+    <button data-rank="2" class="tap-btn">2</button>
+    <button data-rank="3" class="tap-btn">3</button>
 
-    <button data-rank="4">4</button>
-    <button data-rank="5">5</button>
-    <button data-rank="6">6</button>
+    <button data-rank="4" class="tap-btn">4</button>
+    <button data-rank="5" class="tap-btn">5</button>
+    <button data-rank="6" class="tap-btn">6</button>
 
-    <button data-rank="7">7</button>
-    <button data-rank="8">8</button>
-    <button data-rank="9">9</button>
+    <button data-rank="7" class="tap-btn">7</button>
+    <button data-rank="8" class="tap-btn">8</button>
+    <button data-rank="9" class="tap-btn">9</button>
 
-    <button id="tapUndo" class="undo">Undo</button>
-    <button data-rank="T" class="ten">T</button>
-    <button id="tapTarget" class="target">Target</button>
+    <button id="tapUndo" class="tap-btn tap-undo" type="button">Undo</button>
+    <button data-rank="T" class="tap-btn tap-ten" type="button">T</button>
+    <button id="tapTarget" class="tap-btn tap-target" type="button">
+      Target <span id="tapTargetVal" class="tap-target-val">TABLE</span>
+    </button>
   </div>
 </nav>
 
