--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
       <div id="guideLine" class="rec-sub">Enter Player + Dealer upcard to get guidance.</div>
       <div class="rec-hint">
         Target: <span id="targetVal" class="target-pill">TABLE</span>
+        <button id="cycleTargetBtn" class="btn ghost mini-btn" type="button">Cycle Target (C)</button>
       </div>
     </section>
   </main>
